--- a/beta/index.html
+++ b/beta/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/assets/styles.css?v=20260105-mainfix2e8" />
 
   <!-- Chart.js (도넛 차트용) -->
-  <script type="module" src="/assets/beta-shell.js?v=20260106-menu1"></script>
+  <script type="module" src="/assets/beta-shell.js?v=20260107-shell7"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
