--- a/beta/admin-beta.html
+++ b/beta/admin-beta.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/assets/admin-beta.css?v=20251224-ltvup1" />
 
   <!-- 관리자 전용 스크립트 -->
-  <script src="/assets/beta-shell.js?v=20260107-shell7"></script>
+  <script type="module" src="/assets/beta-shell.js?v=20260107-shell7"></script>
 
   <script type="module" src="/assets/admin-beta.js?v=20251218-fix1"></script>
 </head>
